--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".MarketingPanel"></activity>
+        <activity android:name=".AdminPanelEditUser"></activity>
+        <activity android:name=".MarketingPanel" />
         <activity android:name=".AdminPanel" />
         <activity android:name=".EditProfileAct" />
         <activity android:name=".MyBookingDetailAct" />
